tests/NormalTests/paczka1/fuzzy1/60649091.err
Error in line 4: BrsF A723 32,4
Error in line 6: CHvv4s A723 29,2
Error in line 12: wnyKEOuxUb A723 72,9
Error in line 14: pQO6zI56Qx A751 86,6
Error in line 8: BrsF S259 17,2
Error in line 40: wnyKEOuxUb A7v1 467,7
